syntax = "proto3";

option go_package = "github.com/pirosiki197/sodan-grpc/pkg/grpc/pb/api/v1;apiv1";

package api.v1;
import "google/protobuf/empty.proto";

service APIService{
    // Sodan
    rpc CreateSodan(CreateSodanRequest) returns (CreateSodanResponse);
    rpc GetSodan(GetSodanRequest) returns (GetSodanResponse);
    rpc GetSodanList(google.protobuf.Empty) returns (GetSodanListResponse);
    rpc GetSodansByTag(GetSodansByTagRequest) returns (GetSodansByTagResponse);
    rpc CloseSodan(CloseSodanRequest) returns (google.protobuf.Empty);

    // Chat
    rpc CreateReply(CreateReplyRequest) returns (CreateReplyResponse);
    rpc GetReply(GetReplyRequest) returns (GetReplyResponse);
    rpc GetReplies(GetRepliesRequest) returns (GetRepliesResponse);
    rpc SubscribeSodan(SubscribeSodanRequest) returns (stream SubscribeSodanResponse);
}

// Sodan
message CreateSodanRequest {
    string title = 1;
    string text = 2;
    string creater_id = 3;
    repeated Tag tags = 4;
}

message CreateSodanResponse {
    uint32 id = 1;
}

message GetSodanRequest {
    uint32 id = 1;
}

message GetSodanResponse {
    Sodan sodan = 1;
}

message GetSodanListResponse {
    repeated Sodan sodans = 1;
}

message GetSodansByTagRequest {
    string tag_name = 1;
}

message GetSodansByTagResponse {
    repeated Sodan sodans = 1;
}

message CloseSodanRequest {
    uint32 id = 1;
}

// Chat
message CreateReplyRequest {
    string text = 1;
    string creater_id = 2;
    uint32 sodan_id = 3;
}

message CreateReplyResponse {
    uint32 id = 1;
}

message GetReplyRequest {
    uint32 id = 1;
}

message GetReplyResponse {
    Reply reply = 1;
}

message GetRepliesRequest {
    uint32 sodan_id = 1;
}

message GetRepliesResponse {
    repeated Reply replies = 1;
}

message SubscribeSodanRequest {
    uint32 id = 1;
}

message SubscribeSodanResponse {
    Reply reply = 1;
}


// Entities
message Sodan {
    uint32 id = 1;
    string title = 2;
    string text = 3;
    string creater_id = 4;
    bool is_closed = 5;
    repeated Tag tags = 6;
}

message Tag {
    string name = 1;
}

message Reply {
    uint32 id = 1;
    string text = 2;
    string creater_id = 3;
    uint32 sodan_id = 4;
}
